# mlopsproj

./: .gitignore  Dockerfile  build_docker.bat  dummy.py  pyproject.toml
src/: main.py  model_training.py
